add k6 load testing with prometheus grafana influxdb
